# stocks

./: README.md  pyproject.toml
src/reddit/: __init__.py  bot.py
test/: test.py  test_patterns.py  test_stocks.py
